# open3d_slam_advanced_rss_2024_public

./: README.md
libpointmatcher/: CMakeLists.txt  CatkinBuild.cmake  PureCMakeBuild.cmake  README.md  mkdocs.yml  package.xml  pointmatcher.pc.in
libpointmatcher/debian_legacy/: control  copyright
libpointmatcher/doc/: Compilation.md  CompilationMac.md  CompilationWindows.md  Datafilters.md  LinkingProjects.md  ReleaseNotes.md  UnitTestDev.md  UsingInRos.md  index.md
libpointmatcher/examples/: build_map.cpp
libpointmatcher/examples/data/: icp_point_to_plane.yaml
libpointmatcher/examples/data/icp_data/: force4DOFForPointToPlaneMinimizer.yaml
libpointmatcher/examples/demo_Qt/: demo.pro
libpointmatcher/pointmatcher/: Bibliography.cpp  Bibliography.h  DataPoints.cpp  DataPointsFilter.cpp  DataPointsFiltersImpl.h  Documentation.dox  ErrorMinimizer.cpp  ICP.cpp  IO.cpp  Inspector.cpp  InspectorsImpl.cpp  Logger.cpp  LoggerImpl.cpp  MatchersImpl.cpp  MatchersImpl.h  Matches.cpp  OutlierFiltersImpl.cpp  PointCloudGenerator.cpp  PointMatcher.h  PointMatcherPrivate.h  Registrar.cpp  Registrar.h  Registry.cpp  SurfaceNormalEstimatorPCA.cpp  Transformation.cpp  TransformationCheckersImpl.cpp  TransformationsImpl.cpp
libpointmatcher/pointmatcher/DataPointsFilters/: CovarianceSampling.cpp  Elipsoids.cpp  Gestalt.cpp  HiddenPointRemoval.cpp  HiddenPointRemoval.h  Identity.cpp  MaxDensity.cpp  NormalSpace.cpp  NormalSpace.h  OctreeGrid.cpp  OctreeGrid.h  OrganizedCloudSurfaceNormal.cpp  OrganizedCloudSurfaceNormal.h  OrientNormals.cpp  OrientNormals.h  RandomSampling.cpp  RandomSampling.h  RemoveNaN.cpp  SamplingSurfaceNormal.cpp  SurfaceNormal.cpp  SurfaceNormal.h
libpointmatcher/pointmatcher/DataPointsFilters/utils/: utils.h
libpointmatcher/pointmatcher/DataPointsFilters/utils/octree/: Octree.h  Octree.tpp  OctreeLookupTable.h  OctreeSamplers.h  OctreeSamplers.tpp
libpointmatcher/pointmatcher/ErrorMinimizers/: Identity.cpp  Identity.h  PointToPlane.cpp  PointToPlane.h  PointToPlaneWithCov.cpp  PointToPlaneWithCov.h  PointToPoint.cpp  PointToPoint.h  PointToPointSimilarity.cpp  PointToPointSimilarity.h  PointToPointWithCov.cpp  PointToPointWithCov.h
libpointmatcher/pointmatcher/testing/: RegistrationTestCase.cpp  RegistrationTestCase.h  RegistrationTestResult.cpp  RegistrationTestResult.h  TransformationError.cpp  TransformationError.h  typedefs.h  utils_filesystem.cpp  utils_filesystem.h  utils_geometry.cpp  utils_geometry.h  utils_gtest.cpp  utils_gtest.h  utils_registration.cpp  utils_registration.h  utils_transformations.cpp  utils_transformations.h
libpointmatcher/utest/: CMakeLists.txt  utest.cpp  utest.h
libpointmatcher/utest/ui/: DataFilters.cpp  DataPoints.cpp  IO.cpp  Matcher.cpp  Outliers.cpp  PointCloudGenerator.cpp  Transformations.cpp
libpointmatcher/utest/ui/icp/: Conditioning.cpp  GeneralTests.cpp
libpointmatcher/utest/ui/octree/: Octree.cpp
open3d_slam_rsl/: .gitignore
open3d_slam_rsl/open3d_catkin/: CMakeLists.txt
open3d_slam_rsl/open3d_slam/open3d_slam/: CMakeLists.txt  package.xml
open3d_slam_rsl/open3d_slam/open3d_slam/include/open3d_slam/: Mapper.hpp  Odometry.hpp  Parameters.hpp  ScanToMapRegistration.hpp  SlamWrapper.hpp  Submap.hpp  SubmapCollection.hpp  Transform.hpp  TransformInterpolationBuffer.hpp  Voxel.hpp  VoxelHashMap.hpp
open3d_slam_rsl/open3d_slam/open3d_slam/src/: CloudRegistration.cpp  Mapper.cpp  MotionCompensation.cpp  Odometry.cpp  PlaceRecognition.cpp  ScanToMapRegistration.cpp  SlamWrapper.cpp  Submap.cpp  SubmapCollection.cpp  Transform.cpp  TransformInterpolationBuffer.cpp  croppers.cpp  helpers.cpp
open3d_slam_rsl/open3d_slam/open3d_slam_io/legacy/open3d_slam_yaml_io/src/: parameter_loaders.cpp
open3d_slam_rsl/open3d_slam/open3d_slam_io/open3d_slam_lua_io/src/: LuaLoader.cpp
open3d_slam_rsl/open3d_utils/open3d_conversions/: CMakeLists.txt  package.xml
open3d_slam_rsl/open3d_utils/open3d_conversions/include/open3d_conversions/: open3d_conversions.h  usings.hpp
open3d_slam_rsl/open3d_utils/open3d_conversions/src/: open3d_conversions.cpp
open3d_slam_rsl/ros/open3d_slam_ros/: CMakeLists.txt  FindGflags.cmake  package.xml
open3d_slam_rsl/ros/open3d_slam_ros/include/open3d_slam_ros/: DataProcessorRos.hpp  ImuBuffer.hpp  ImuSignalLowPassFilter.hpp  OnlineRangeDataProcessorRos.hpp  RosbagRangeDataProcessorRos.hpp  SlamWrapperRos.hpp  helpers_ros.hpp
open3d_slam_rsl/ros/open3d_slam_ros/launch/: development.launch  mapping_live.launch  replay.launch  visualize_generated_map.launch
open3d_slam_rsl/ros/open3d_slam_ros/launch/tutorials/: tutorial_1_LO.launch  tutorial_2_LiDAR_SLAM.launch  tutorial_3_LiDAR_SLAM_with_SE.launch
open3d_slam_rsl/ros/open3d_slam_ros/param/: icp.yaml  param_replay.lua  param_robosense_rs16.lua  param_rs16_localization.lua  tutorial_1_LO.lua  tutorial_2_LiDAR_SLAM.lua  tutorial_3_LiDAR_SLAM_with_SE.lua
open3d_slam_rsl/ros/open3d_slam_ros/param/default/: parameter_structure_definitions.lua
open3d_slam_rsl/ros/open3d_slam_ros/rviz/: default.rviz  replay.rviz  tutorial_1.rviz  visualizer_node.rviz
open3d_slam_rsl/ros/open3d_slam_ros/src/: DataProcessorRos.cpp  ImuBuffer.cpp  OnlineRangeDataProcessorRos.cpp  RosbagRangeDataProcessorRos.cpp  SlamMapInitializer.cpp  SlamWrapperRos.cpp  helpers_ros.cpp  mapping_node.cpp  visualizer_node.cpp
pointmatcher_ros/: CMakeLists.txt  metadata.yaml  package.xml
pointmatcher_ros/include/pointmatcher_ros/: StampedPointCloudPublisher.h
