<package>
  <name>libpointmatcher</name>
  <version>1.3.21</version>
  <description>libpointmatcher is a modular ICP library, useful for robotics and computer vision.</description>
  <author email="f.pomerleau@gmail.com">Francois Pomerleau</author>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/anybotics/libpointmatcher</url>

  <!-- If a pure-cmake build is desired, the buildtool should be switched to 'cmake' -->
  <!-- On the other hand, if a catkin build is desired, the build tool depend should be 'catkin' -->
  <buildtool_depend>catkin</buildtool_depend>
<!--   <build_depend>cmake_clang_tools</build_depend> -->

  <build_depend>boost</build_depend>
  <build_depend>libnabo</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>libnabo</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>yaml-cpp</run_depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>

  <!-- For a pure-cmake build the package must be exported explicitly -->
  <!-- Thus the following block of code must be un-commented -->
  <!--
  <export>
    <build_type>cmake</build_type>
  </export>
  -->

</package>
